GOCDB-5.3 Release (TBC) 
  - Add Multiple Endpoints per Service: https://wiki.egi.eu/wiki/GOCDB/Release4/Development/MultipleEndpointsPerService 

GOCDB-5.2 Release (13 Feb 2014) 
 - Extensibility mechanism (allows custom key=value pairs to be defined on sites and services with PI query support using the 'extensions' PI parameter).
 - Notification Service to email relevant users on role requests, approvals and denials. (RT6223)
 - IPv6 addresses added to sites and services.https://wiki.egi.eu/wiki/GOCDB/Release4/Development/ipv6support  
 - Extended unit tests for new format PI methods.
 - Multiple updates to user documentation.
 - Continued prototyping of multiple endpoints per service.
 - EUDAT Migrated from GOCDB4 to GOCDB5.2. 

GOCDB-5.1 Release (26 Nov 2013)
- New get_downtime_nested_services method. RT1017
- Get_roc_contacts now includes a link field for GOCDB_PORTAL_URL  RT1423
- New service endpoint filters in web portal services view. Can now filter by 
  NGI, CertificationStatus and show closed sites. RT4465
- Security fix applied to get_site_contacts, get_roc_contacts BUGFIX
- Get_egee_contacts modified to return results as previously did nothing. 
  Does support the ability for the user to supply a parameter called project. 
  At the moment this is hardcoded to EGI. But deleting that line will allow this 
  method to work for Prace,EUDAT etc. BUGFIX
- New active & imminent downtime view in portal. Users can see currently 
  active downtimes and planned downtimes for the next 1,2,3 or 4 weeks. RT1092

GOCDB-5 Release (02-10-2013)
- Support for multiple RDBMSs using Doctrine ORM
- Extensive refactoring at all layers to use Doctrine entities.
- By design: the 'external' interfaces (PI and portal GUI) have few outwardly visible 
  changes to be backward compatible. 
- Simpler backend Role model impl (role classifications dropped) so that 
  a role over an OwnedEntity has a single role type name and a single status (PENDING or GRANTED) 